# PredMrkt

./: .gitignore  README.md  package-lock.json  pyproject.toml
config/: default.toml  dev.toml
data/: predex.duckdb  predex.duckdb.wal
docs/: KALSHI_INTEGRATION_PLAN.md  STATE_AND_ROADMAP.md
predexchange-core/: Cargo.toml  README.md
predexchange-core/src/: lib.rs
src/predexchange/: __init__.py
src/predexchange.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/predexchange/api/: __init__.py  compare.py  main.py  schemas.py
src/predexchange/cli/: __init__.py  api_cmd.py  app.py  kalshi_cmd.py  log.py  markets.py  pairs_cmd.py  replay.py  sim.py  track.py  tui_cmd.py
src/predexchange/config/: __init__.py  settings.py
src/predexchange/ingestion/: __init__.py  base.py  manager.py  rate_limit.py
src/predexchange/matching/: __init__.py  candidates.py
src/predexchange/metrics/: __init__.py  live.py
src/predexchange/models/: __init__.py  market.py  orderbook.py  trade.py
src/predexchange/orderbook/: __init__.py  aggregator.py  engine.py
src/predexchange/replay/: __init__.py  engine.py
src/predexchange/simulation/: __init__.py  fill_model.py  portfolio.py  runner.py  strategy.py
src/predexchange/storage/: __init__.py  candidate_rejections.py  db.py  event_log.py  event_pairs.py  export.py  markets.py  snapshots.py  sports.py
src/predexchange/tui/: app.py
tests/: test_orderbook.py  test_replay.py
web/: README.md  next.config.js  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
(+21 files in other folders)
