[project]
name = "predexchange"
version = "0.1.0"
description = "Prediction market data, visualization, replay, and simulation platform (Polymarket-first)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "structlog>=24.1.0",
    "pydantic>=2.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
tui = [
    "textual>=0.47.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
predex = "predexchange.cli.app:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
